Commented out some dependencies which were seriously slowing down clojure startup time. This can be included in specific projects if needed. Also rolled back to a refactor-nrepl versions which didn't throw an exception when running up a repl in a non-project directory.